          (thanks to Brodie Thiesfield)

        - Performance  improvements in  file loading  by using  a static
          buffer.
          (thanks to Brodie Thiesfield)

        - Added scew_parser_load_file_fp().
          (thanks to Brodie Thiesfield)

        - Some other minor changes.
          (thanks to Brodie Thiesfield)

** Fixes:

        - strdup() is a GNU extension, replaced it by own version.

        - Fixed scew_element_by_name.
          (reported by Eric Fronheiser)

        - Warning fixes (level 4) in Microsoft Visual C++ 7.
          (thanks to Brodie Thiesfield)

        - Multi-thread    support     fixed    in    Microsoft    Visual
          C++.  __declspec(thread)  did  not  work,  use  TLS  functions
          instead.
          (thanks to Brodie Thiesfield)

------------------------------------------------------------------------

* Version 0.3.0 (10/07/03)

** Changes:

        - Added more  string functions.  New memory functions  have also
          been added.

        - Performance improved in element and attribute iteration.
          (thanks to Sanzo Miyazawa)

        - Support  for   XML  declaration  attributes   has  been  added
          (version,  encoding,  standalone).   This  attributes  can  be
          changed using SCEW tree functions.

        - Improved white spaces treatment in XML element contents.

        - Added error system. See documentation for more details.

        - Added pkg-config file.
          (thanks to Neil Harvey)

        - Added 'make doc'. If you have doxygen installed (which will be
          automatically  detected), it  will create  SCEW documentation.
          Execute  './configure   --help'  to  see   more  documentation
          options.

        - 'make install' does not install example binaries anymore.

** Fixes:

        - scew_tree_save_file() did not fclose output file.
          (reported by Paul Bohme)

        - scew_element_free()  did   not  decrement  parent   number  of